--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.0
+Date: 2021-10-08
+  Changes:
+    - Optimized
+    - Refactored
+    - Changed color and rendering
+  Notes:
+    - Updated by ZwerOxotnik
+---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 2020-11-24
   Changes:
