--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.3
+Date: 2021-10-08
+  Changes:
+    - Destroying lines during on_player_left_game event
+  Notes:
+    - Updated by ZwerOxotnik
+---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 2021-10-08
   Changes:
