--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.6
+Date: 2021-12-22
+  Changes:
+    - Changed event handler (slightly better performance)
+---------------------------------------------------------------------------------------------------
 Version: 2.0.5
 Date: 2021-10-24
   Changes:
