--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.9
+Date: 2022-06-18
+  Bugfixes:
+    - Fixed colors
+---------------------------------------------------------------------------------------------------
 Version: 2.0.8
 Date: 2022-06-18
   Bugfixes:
