--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.10
+Date: 2022-06-18
+  Changes:
+    - Improved performance
+    - Changed stability (I can't say for sure how it's better etc)
+---------------------------------------------------------------------------------------------------
 Version: 2.0.9
 Date: 2022-06-18
   Bugfixes:
