--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,19 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.0
+Date: 2022-06-20
+  Features:
+    - Added customizable line width for players via settings
+  Changes:
+    - Doesn't create lines for empty bodies
+    - Improved stability
+    - Improved settings slightly
+    - zk-lib >= 0.10.24 is optional
+    - Changed behavior slightly (it won't remember your body in the editor)
+    - Added integration with http://mods.factorio.com/mod/gvv
+  Bugfixes:
+    - Fixed very rare visual bug with lines
+    - Fixed setting values
+---------------------------------------------------------------------------------------------------
 Version: 2.0.10
 Date: 2022-06-18
   Changes:
