--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.2.0
+Date: 2022-06-20
+  Features:
+    - Added new setting to ignore bodies with less N items
+---------------------------------------------------------------------------------------------------
 Version: 2.1.0
 Date: 2022-06-20
   Features:
