--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.3.0
+Date: 2022-06-20
+  Features:
+    - You can track any body by pressing gps message after death
+---------------------------------------------------------------------------------------------------
 Version: 2.2.0
 Date: 2022-06-20
   Features:
