--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.6.1
+Date: 2022-10-03
+  Bugfixes:
+    - Fixed a crush for some rare case(s).
+---------------------------------------------------------------------------------------------------
 Version: 2.6.0
 Date: 2022-06-21
   Features:
