--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.7.1
+Date: 2022-11-27
+  Bugfixes:
+    - Fixed crush when a player coprse was removed before player respawn
+---------------------------------------------------------------------------------------------------
 Version: 2.7.0
 Date: 2022-10-17
   Changes:
