--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.7.4
+Date: 2024-11-19
+  Locale:
+    - Added Dutch translation (thanks to @jordditters (Jord Ditters) and @julien.marbaix (Julien Marbaix) on crowdin)
+    - Added Catalan translation (thanks to @badall on crowdin)
+    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
+---------------------------------------------------------------------------------------------------
 Version: 2.7.3
 Date: 2024-07-20
   Locale:
