--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.8.0
+Date: 2024-11-19
+  Changes:
+    - Updated for Factorio 2.0
+---------------------------------------------------------------------------------------------------
 Version: 2.7.4
 Date: 2024-11-19
   Locale:
